# overclaude

./: CLAUDE.md  README.md  install.sh  pyproject.toml  sync.sh  uninstall.sh
claude/: ULTRACODE.md
hooks/: ctx-notify.sh  ctx-watch.sh  handoff-inject.sh
settings/: settings-fragment.json
shell/: zshrc-snippet.sh
skills/handoff/: SKILL.md
skills/swap/: SKILL.md
src/overclaude/: __init__.py  cli.py
statusline/: statusline-command.sh
